@@ -4,6 +4,7 @@ project (asnmp_example_trap) : aceexe {
   exename = trap
   after += asnmp_lib
   libs  += asnmp
+  avoids += uses_wchar
   includes += $(ACE_ROOT)/ASNMP
   source_files {
     trap.cpp
