@@ -4,6 +4,7 @@ project (asnmp_example_walk) : aceexe {
   exename = walk
   after += asnmp_lib
   libs  += asnmp
+  avoids += uses_wchar
   includes += $(ACE_ROOT)/ASNMP
   source_files {
     walk.cpp
